Ugh. More layout issues!

--- a/style.css
+++ b/style.css
@@ -561,6 +561,7 @@ hr {
 	top: 160px;
 	left: 15px;
 	padding: 0;
+	margin: 0;
 }
 
 #clearJumble:not(:disabled) {
@@ -578,6 +579,7 @@ hr {
 	right: 15px;
 	padding: 0px 8px 0px 8px;
 	border-radius: 10px;
+	margin: 0;
 }
 
 #nextjumble:not(:disabled) {
